--- a/packages/3d-web-avatar-selection-ui/src/avatar-selection-ui/components/AvatarPanel/AvatarSelectionUIComponent.module.css
+++ b/packages/3d-web-avatar-selection-ui/src/avatar-selection-ui/components/AvatarPanel/AvatarSelectionUIComponent.module.css
@@ -3,21 +3,22 @@
   min-height: 70px;
   position: fixed;
   top: 12px;
-  right: 12px;
+  left: 12px;
   z-index: 102;
   user-select: none;
 }
 
 .closeButton {
   background-color: rgba(0, 0, 0, 0.8);
-  font-family: "arial black";
+  font-family: "arial";
+  font-size: 26px;
   color: #ffffff90;
   border-radius: 50%;
   width: 44px;
   height: 44px;
   position: fixed;
   top: 12px;
-  right: 12px;
+  left: 12px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
   border: 1px solid rgba(255, 255, 255, 0.21);
   -webkit-user-select: none;
@@ -33,7 +34,7 @@
   height: 42px;
   position: fixed;
   top: 12px;
-  right: 12px;
+  left: 12px;
   box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.8);
   border: 1px solid rgba(255, 255, 255, 0.21);
   -webkit-user-select: none;
@@ -56,18 +57,28 @@
 .avatarSelectionContainer {
   position: fixed;
   top: 11px;
-  right: 60px;
+  left: 70px;
   width: 30%;
   min-width: 290px;
   max-width: 720px;
   padding: 8px;
   background: #000000b3;
   border-radius: 8px;
+  border: 1px solid rgba(255,255, 255, 0.5);
   font-family: "Helvetica", "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
   z-index: 103;
   user-select: none;
   padding-bottom: 20px;
+  transition: all 0.6s cubic-bezier(0.76, 0, 0.24, 1);
+}
+
+.hidden {
+  top: -630px !important;
+}
+
+.visible {
+  top: 11px !important;
 }
 
 .avatarSelectionUi {
@@ -79,7 +90,7 @@
 
 .avatarSelectionUi::-webkit-scrollbar {
   -webkit-appearance: none;
-  width: 10px;
+  width: 5px;
 }
 
 .avatarSelectionUi::-webkit-scrollbar-thumb {
@@ -96,7 +107,10 @@
 }
 
 .avatarSelectionUiHeader h2 {
-  font-size: 20px;
+  font-size: 17px;
+  line-height: 21px;
+  margin-top: 7px;
+  margin-bottom: 7px;
 }
 
 .avatarSelectionUiCloseButton {
@@ -107,7 +121,7 @@
 
 .avatarSelectionUiContent {
   padding: 10px;
-  margin-top: 20px;
+  margin-top: 7px;
   display: flex;
   gap: 4%;
   flex-wrap: wrap;
