--- a/packages/3d-web-client-editor/src/editor-ui/components/EditorPanel/EditorPanelComponent.module.css
+++ b/packages/3d-web-client-editor/src/editor-ui/components/EditorPanel/EditorPanelComponent.module.css
@@ -131,6 +131,19 @@
   background-color: #000000;
 }
 
+.loading {
+  color: #fff;
+  background-color: rgba(255, 255, 255, 0.3);
+  width: 100%;
+  height: 100%;
+  font-family: monospace;
+  font-size: 50px;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 :global(.cm-editor) {
   height: 100%;
 }
