--- a/packages/3d-web-client-editor/src/editor-ui/components/EditorPanel/EditorPanelComponent.module.css
+++ b/packages/3d-web-client-editor/src/editor-ui/components/EditorPanel/EditorPanelComponent.module.css
@@ -35,27 +35,41 @@
   font-size: 12px;
   width: 250px !important;
   min-width: 250px !important;
-  padding: 12px;
-  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
 }
 
-.documentList h4 {
+.fileListHeader {
   text-align: center;
-  margin: 3px auto;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  height: 30px;
+  min-height: 30px;
+  line-height: 30px;
+  vertical-align: middle;
+}
+
+.fileListTitle {
+  font-family: monospace;
   color: #77aaff;
 }
 
-.documentList::-webkit-scrollbar {
+.fileListBody {
+  flex-grow: 1;
+  overflow-y: auto;
+  padding: 12px;
+}
+
+.fileListBody::-webkit-scrollbar {
   width: 6px;
 }
 
-.documentList::-webkit-scrollbar-thumb {
+.fileListBody::-webkit-scrollbar-thumb {
   background-color: #424242;
   border-radius: 10px;
   border: 1px solid rgba(0, 0, 0, 0.5);
 }
 
-.documentList::-webkit-scrollbar-track {
+.fileListBody::-webkit-scrollbar-track {
   background-color: #000000;
 }
 
@@ -100,18 +114,39 @@
 
 .editorWrapper {
   flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+
+.editorHeader {
+  color: #fff;
+  background-color: transparent;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+  font-size: 15px;
+  height: 30px;
+  padding: 0px 0px 0px 12px;
+  line-height: 30px;
+}
+
+.headerTitle {
+  font-family: monospace;
+}
+
+.editorBody {
+  flex-grow: 1;
+  height: 100%;
+  overflow: hidden;
 }
 
 .editor {
   position: relative;
   width: 100%;
   height: 100%;
-
   overflow: auto;
   white-space: pre;
   font-size: 15px;
   font-weight: 900;
-
   scrollbar-width: thin;
   scrollbar-color: #424242 #000000;
 }
