--- a/packages/3d-web-client-editor/src/editor-ui/components/EditorPanel/EditorPanelComponent.module.css
+++ b/packages/3d-web-client-editor/src/editor-ui/components/EditorPanel/EditorPanelComponent.module.css
@@ -117,6 +117,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
+  max-width: calc(100vw - 450px);
 }
 
 .editorHeader {
@@ -193,15 +194,17 @@
 
 .loading {
   color: #fff;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: transparent;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   font-family: monospace;
-  font-size: 50px;
-  position: absolute;
+  font-size: 42px;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  text-shadow: 1px 1px 7px black;
+  z-index: 999;
+  position: absolute;
 }
 
 :global(.cm-editor) {
