--- a/packages/3d-web-avatar-selection-ui/src/avatar-selection-ui/components/AvatarPanel/AvatarSelectionUIComponent.module.css
+++ b/packages/3d-web-avatar-selection-ui/src/avatar-selection-ui/components/AvatarPanel/AvatarSelectionUIComponent.module.css
@@ -1,7 +1,8 @@
 .menuButton {
   width: 70px;
   min-height: 70px;
-  position: fixed;
+  position: absolute;
+  ;
   top: 12px;
   left: 12px;
   z-index: 102;
@@ -28,7 +29,8 @@
   border-radius: 50%;
   width: 44px;
   height: 44px;
-  position: fixed;
+  position: absolute;
+  ;
   top: 12px;
   left: 12px;
   border: 1px solid rgba(255, 255, 255, 0.21);
@@ -43,7 +45,8 @@
   border-radius: 50%;
   width: 42px;
   height: 42px;
-  position: fixed;
+  position: absolute;
+  ;
   top: 12px;
   left: 12px;
   border: 1px solid rgba(255, 255, 255, 0.21);
@@ -65,7 +68,8 @@
 }
 
 .avatarSelectionContainer {
-  position: fixed;
+  position: absolute;
+  ;
   top: 11px;
   left: 70px;
   width: 30%;
